tekton/cluster_resources/tkn-dashboard-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
        pathType: ImplementationSpecific
        path: /
  ingressClassName: nginx
status:
  loadBalancer:
    ingress:
    - hostname: localhost
